--- a/ejercicios/rags/data/notebookllm_constitucion.yaml
+++ b/ejercicios/rags/data/notebookllm_constitucion.yaml
@@ -1,7 +1,7 @@
 Constitución Española:
 
   Fuente_BOE:
-    numero: '311'
+    numero: 311
     fecha: 29 de diciembre de 1978
     publicacion: BOE
     referencia: BOE-A-1978-31229
